# diffmerge

./: CMakeLists.txt  README.md
diffmerge-cli/: CMakeLists.txt
diffmerge-cli/src/: CliOptions.cpp  CliOptions.h  FileLoader.cpp  FileLoader.h  HunkPrinter.cpp  HunkPrinter.h  main.cpp
diffmerge-cli/tests/: CMakeLists.txt  test_cli.cpp
diffmerge-cli/tests/fixtures/: code_a.cpp  code_b.cpp  greek_a.txt  greek_b.txt  ws_a.txt  ws_b.txt
diffmerge-corpus-dl/: CMakeLists.txt
diffmerge-corpus-dl/src/: CorpusProcessor.cpp  CorpusProcessor.h  Downloader.cpp  Downloader.h  SliderParser.cpp  SliderParser.h  annotate_main.cpp  main.cpp
diffmerge-corpus-dl/tests/: CMakeLists.txt  test_slider_parser.cpp
diffmerge-gui/: CMakeLists.txt
diffmerge-gui/res/: resources.qrc
diffmerge-gui/src/: MainWindow.cpp  MainWindow.h  main.cpp
diffmerge-gui/src/common/: ColorScheme.cpp  ColorScheme.h
diffmerge-gui/src/dirview/: DirDiffModel.cpp  DirDiffModel.h  DirDiffWidget.cpp  DirDiffWidget.h
diffmerge-gui/src/editor/: DiffEditor.cpp  DiffEditor.h  DiffGutter.cpp  DiffGutter.h  DiffHighlighter.cpp  DiffHighlighter.h  DiffSideMargin.cpp  DiffSideMargin.h  IntraLineDiffEngine.cpp  IntraLineDiffEngine.h
diffmerge-gui/src/fileview/: AlignedLineModel.cpp  AlignedLineModel.h  FileDiffWidget.cpp  FileDiffWidget.h  ScrollSyncMapper.cpp  ScrollSyncMapper.h
diffmerge-gui/tests/: CMakeLists.txt  screenshot_tool.cpp  test_aligned_model.cpp  test_intra_line_diff.cpp  test_scroll_sync_mapper.cpp
diffmerge-slider-eval/: CMakeLists.txt
diffmerge-slider-eval/src/: SliderEval.cpp  SliderEval.h  main.cpp
diffmerge-slider-eval/tests/: CMakeLists.txt  test_slider_eval.cpp
libdiffcore/: CMakeLists.txt
libdiffcore/include/diffcore/: DiffEngine.h  DiffTypes.h  LineInterner.h  SliderHeuristics.h
libdiffcore/src/: DiffEngine.cpp  LineInterner.cpp  SliderHeuristics.cpp
libdiffcore/src/internal/: Diff.h  Structs.h
libdiffcore/tests/: CMakeLists.txt  smoke_engine.cpp  test_engine.cpp  test_interner.cpp
